single-alb-ingress-with-different-namespaces+-fargateprofiles/apps/app3-ns-mphasisalta-ca/deployment+service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: mphasisalta-ca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - image: gcr.io/google_containers/echoserver:1.4
          imagePullPolicy: Always
          name: echoserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: mphasisalta-ca
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30444
      protocol: TCP
  selector:
    app: echoserver
